remove scrolling problsm and fix mobile

--- a/packages/vital-carousel/assets/dots.css
+++ b/packages/vital-carousel/assets/dots.css
@@ -27,6 +27,7 @@ input[type="radio"] {
   height: 10px;
   border-radius: 50%;
   border: 1px solid black;
+  background: black;
   transition: background 0.25s;
 }
 
