--- a/packages/vital-carousel/assets/scroll-snap-slider.css
+++ b/packages/vital-carousel/assets/scroll-snap-slider.css
@@ -64,7 +64,7 @@
   display: none;
 }
 
-.indicator {
+.dots.indicator {
   background-color: black;
   border: 0;
   border-radius: 50%;
@@ -73,6 +73,15 @@
   height: 24px;
   transition: black 0.3s cubic-bezier(0.42, 0.42, 0.84, 1);
   width: 24px;
+}
+
+.thumbs.indicator {
+  border: 0;
+  cursor: pointer;
+  display: block;
+  transition: black 0.3s cubic-bezier(0.42, 0.42, 0.84, 1);
+  width: 94px;
+  height: 94px;
 }
 
 .indicator:not(.-active):hover {
