--- a/packages/vital-carousel/assets/scroll-snap-slider.css
+++ b/packages/vital-carousel/assets/scroll-snap-slider.css
@@ -1,33 +1,43 @@
 .scroll-snap-slider {
-  display: flex;
+  /* display: flex;
   flex-wrap: nowrap;
   justify-content: normal;
   overflow-x: auto;
-  padding-inline: 0;
   scroll-behavior: smooth;
   scroll-snap-stop: always;
   scroll-snap-type: x mandatory;
+  */
+  padding-inline: 0;
+  
+  /* TODO Style the scrollbar handle */
 }
 
-.scroll-snap-slider:not(.-show-scroll-bar) {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
+/* Move this to tailwind */
+@media (max-width: 1024px) { 
+  .scroll-snap-slider:not(.-show-scroll-bar) {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 
-.scroll-snap-slider:not(.-show-scroll-bar)::-webkit-scrollbar {
-  display: none;
-}
+  .scroll-snap-slider:not(.-show-scroll-bar)::-webkit-scrollbar {
+    display: none;
+  } 
+} 
 
+/*
 .scroll-snap-slide {
-  align-items: center;
+ align-items: center;
   display: flex;
-  flex: 0 0 auto;
   flex-direction: column;
   justify-content: center;
   max-width: none;
   scroll-snap-align: start;
-}
+  flex: 0 0 auto;
 
+}
+*/
+
+/* move to tailwind */
 .scroll-snap-slider.-multi,
 .scroll-snap-slider.-responsive {
   max-width: calc(3 * 900px);
@@ -47,12 +57,13 @@
 }
 
 .indicators {
+  /*
   align-items: center;
-  display: flex;
   flex-direction: row;
   gap: var(--spacer-half);
   justify-content: center;
   opacity: 1;
+  */
   transition: opacity 0.3s cubic-bezier(0.42, 0.42, 0.84, 1);
 }
 
@@ -62,17 +73,6 @@
 
 .indicators input[type="radio"] {
   display: none;
-}
-
-.dots.indicator {
-  background-color: black;
-  border: 0;
-  border-radius: 50%;
-  cursor: pointer;
-  display: block;
-  height: 24px;
-  transition: black 0.3s cubic-bezier(0.42, 0.42, 0.84, 1);
-  width: 24px;
 }
 
 .thumbs.indicator {
@@ -85,11 +85,11 @@
 }
 
 .indicator:not(.-active):hover {
-  background-color: red;
+  background-color: #019881; /* Components/Scroll Indicator/Active */
 }
 
 .indicators .indicator.-active {
-  background-color: red;
+  background-color: #019881; /* Components/Scroll Indicator/Active */
 }
 
 .visually-hidden:not(:focus, :active) {
