--- a/packages/vital-carousel/assets/scroll-snap-slider.css
+++ b/packages/vital-carousel/assets/scroll-snap-slider.css
@@ -81,6 +81,17 @@
 }
 */
 
+.dot.indicator {
+  background-color: #BFBFBF;
+  border: 0;
+  border-radius: 50%;
+  cursor: pointer;
+  display: block;
+  transition: black 0.3s cubic-bezier(0.42, 0.42, 0.84, 1);
+  width: 8px;
+  height: 8px;
+};
+
 /* 
 .thumbs.indicator {
   border: 0;
