--- a/packages/vital-carousel/assets/scroll-snap-slider.css
+++ b/packages/vital-carousel/assets/scroll-snap-slider.css
@@ -93,7 +93,7 @@
   height: 8px';
 }; */
 
-/* 
+/* Moved to vitalCarouselThumbs 
 .thumbs.indicator {
   border: 0;
   cursor: pointer;
@@ -106,11 +106,11 @@
 
 
 .indicator:not(.-active):hover {
-  background-color: #019881; 
+  background-color: #019881!important; 
 }
 
 .indicators .indicator.-active {
-  background-color: #019881; 
+  background-color: #019881!important; 
 }
 
 /* Move to Tailwind 
